--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -137,11 +137,14 @@ header{
 footer{
   order: 4;
   width: 100%;
+  font-size: 11px;
+  line-height: 20px;
   .flex-container{
-    /* 最終更新時間 */
-    .flex-item.last-update{
+    /* 更新状態 */
+    .flex-item.update-status{
       order: 1;
       flex-grow: 1;
+      padding-left: 5px;
     }
     /* スレッド名 */
     .flex-item.thread-title{
@@ -151,6 +154,7 @@ footer{
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      padding-right: 5px;
     }
   }
 }
