--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -54,8 +54,7 @@ header{
   }
 }
 
-#board-box,
-#thread-box{
+#board-box{
   order: 2;
   width: 100%;
   height: 100%;
@@ -83,62 +82,77 @@ header{
 
 /* ------- スレッド一覧 ------- */
 #thread-box{
+  order: 2;
   background: #efefef;
-}
-/* 書き込み一覧 */
-#post-box{
-  .post{
-    padding: 5px 10px;
-    .post-anker{
-      position: fixed;
-      padding: 2px;
-      display: none;
-      background: #ffffcc;
-      font-size: 9px;
-      box-shadow: 3px 3px 3px rgba(0,0,0,0.4);
-      z-index: 1000;
-    }
-    .post-header{
-      display: block;
-      word-break: break-all;
-      .post-no{
-        display: inline;
-        margin-right: 3px;
-        text-align: left;
-      }
-      .post-no::after{
-        content: ":";
-        margin-right: 3px;
-      }
-      .post-name{
-        display: inline;
-        color: #008800;
-        font-weight: bold;
-        margin-right: 3px;
-      }
-      .post-mail{
-        display: inline;
-        margin-right: 5px;
-      }
-      .post-date{
-        display: inline;
-        margin-right: 5px;
-      }
-      .post-id{
-        display: inline;
-      }
-    }
-    .post-body{
-      padding-left: 30px;
-      word-wrap: break-word;
-      .post-body-line{
-        display: block;
-        line-height: 18px;
-      }
-    }
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  /* スレッドタブ */
+  #thread-tab-box{
+    order: 1;
+    width: 100%;
   }
-  .post:last-child{
-    padding-bottom: 25px;
+  /* 書き込み一覧 */
+  #post-box{
+    order: 2;
+    overflow: auto;
+    height: 100%;
+    .post{
+      padding: 5px 10px;
+      .post-anker{
+        position: fixed;
+        padding: 2px;
+        display: none;
+        background: #ffffcc;
+        font-size: 9px;
+        box-shadow: 3px 3px 3px rgba(0,0,0,0.4);
+        z-index: 1000;
+      }
+      .post-header{
+        display: block;
+        word-break: break-all;
+        .post-no{
+          display: inline;
+          margin-right: 3px;
+          text-align: left;
+        }
+        .post-no::after{
+          content: ":";
+          margin-right: 3px;
+        }
+        .post-name{
+          display: inline;
+          color: #008800;
+          font-weight: bold;
+          margin-right: 3px;
+        }
+        .post-mail{
+          display: inline;
+          margin-right: 5px;
+        }
+        .post-date{
+          display: inline;
+          margin-right: 5px;
+        }
+        .post-id{
+          display: inline;
+        }
+      }
+      .post-body{
+        padding-left: 30px;
+        word-wrap: break-word;
+        .post-body-line{
+          display: block;
+          line-height: 18px;
+        }
+      }
+    }
+    .post:last-child{
+      padding-bottom: 25px;
+    }
   }
 }
 
@@ -188,9 +202,18 @@ footer{
 
 /* photonKit override */
 .btn-group{
-  display: -webkit-inline-box;
+  display: -webkit-inline-box !important;
 }
 
 .btn-group .btn + .btn.active:last-child{
-  border-left: 1px solid #c2c0c2;
+  border-left: 1px solid #c2c0c2 !important;
+}
+
+.tab-item{
+  font-size: 10px !important;
+  padding: 1px 3px !important;
+  background: #ccc !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
 }
