--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -210,10 +210,22 @@ footer{
 }
 
 .tab-item{
+  background: #ccc;
   font-size: 10px !important;
   padding: 1px 3px !important;
-  background: #ccc !important;
   white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
+  .icon-close-tab{
+    left: 3px;
+  }
+}
+
+.tab-item:hover{
+  .icon-close-tab{
+    background: #bcbcbc;
+  }
+  .icon-close-tab:hover{
+    background: #a2a2a2;
+  }
 }
