空改行を表示するように

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -150,6 +150,7 @@ header{
           display: block;
           line-height: 18px;
           user-select: text;
+          min-height: 18px;
           a{ user-select: text; }
         }
       }
