Update npm modules

--- a/src/jade/app.jade
+++ b/src/jade/app.jade
@@ -7,4 +7,4 @@ html
     link(href="../../node_modules/photonkit/dist/css/photon.css" rel="stylesheet" type="text/css" media="all")
   body#app
     div#container
-    script(src="../app.js")
+    script(src="../js/app.js")
