--- a/src/jade/preferences.jade
+++ b/src/jade/preferences.jade
@@ -7,4 +7,4 @@ html
     link(href="../../node_modules/photonkit/dist/css/photon.css" rel="stylesheet" type="text/css" media="all")
   body#preferences
     div#preferences-container
-    script(src="../preferences.js")
+    script(src="../js/preferences.js")
