Fix the scroll problem in app component

--- a/src/jade/app.jade
+++ b/src/jade/app.jade
@@ -5,6 +5,6 @@ html
     title epcviewer
     //- photon.css
     link(href="../../node_modules/photonkit/dist/css/photon.css" rel="stylesheet" type="text/css" media="all")
-  body#app
-    div#container
+  body
+    div#app
     script(src="../js/app.js")
