--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,10 +18,10 @@ a:active{ color: #ff8000; }
   flex-wrap: nowrap;
 }
 
-#container>div{
-  height: 100%;
+#container{
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   height: 100vh;
 }
 
@@ -102,17 +102,26 @@ header{
   }
 }
 
+/* ---------- 板一覧 ---------- */
 #board-box{
   order: 2;
   width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-
-/* ---------- 板一覧 ---------- */
-#board-box{
+  height: 100vh;
   background: #fff;
-  overflow-x: hidden;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  #board-tab-box{
+    order: 1;
+    width: 100%;
+  }
+  #subject-box{
+    order: 2;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100vh;
+  }
 }
 /* スレッド名一覧 */
 #subject-box{
@@ -134,8 +143,8 @@ header{
   order: 2;
   background: #efefef;
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -147,8 +156,9 @@ header{
   /* 書き込み一覧 */
   #post-box{
     order: 2;
-    overflow: auto;
-    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100vh;
     .post{
       padding: 5px 10px;
       .post-anker{
@@ -212,6 +222,7 @@ header{
 /* -------- 書き込み欄 -------- */
 #write-form{
   order: 3;
+  overflow: hidden;
   width: 100%;
   margin: 0px;
   margin-bottom: -1px;
