書き込み中の書き込み欄のデザインをわかりやすくした

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -281,6 +281,11 @@ header{
     border-color: #ddd !important;
     box-shadow: none !important;
   }
+  textarea:disabled{
+    background-color: #eee;
+    color: #777;
+    cursor: not-allowed;
+  }
 }
 
 /* -------- フッター -------- */
