--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,4 @@
-$font-color: #555;
+$font-color: #444;
 $name-color: #009900;
 $admin-name-color: #f95a5a;
 
@@ -155,6 +155,7 @@ header{
 }
 
 /* ------- スレッド一覧 ------- */
+/* ツールチップ */
 .tooltip{
   position: absolute;
   min-width: 100%;
@@ -196,29 +197,23 @@ header{
     height: 100vh;
     .post{
       padding: 5px 10px;
-      .post-anker{
-        position: fixed;
-        padding: 2px;
-        display: none;
-        background: #ffffcc;
-        font-size: 9px;
-        box-shadow: 3px 3px 3px rgba(0,0,0,0.4);
-        z-index: 1000;
-        user-select: text;
-      }
       .post-header{
         display: block;
         word-break: break-all;
-        user-select: text;
-        .post-no,.post-name,.post-mail,.post-date,.post-id{
+        .post-no,
+        .post-name,
+        .post-name-admin,
+        .post-mail,
+        .post-date,
+        .post-id,
+        div[class*="post-id"]{
+          display: inline;
           user-select: text;
         }
         .post-no{
-          display: inline;
           text-align: left;
         }
         .post-name{
-          display: inline;
           color: $name-color;
           font-weight: bold;
           margin-left: 3px;
@@ -228,15 +223,10 @@ header{
           color: $admin-name-color;
         }
         .post-mail{
-          display: inline;
           margin-right: 5px;
         }
         .post-date{
-          display: inline;
           margin-right: 5px;
-        }
-        div[class^="post-id"]{
-          display: inline;
         }
         .post-id{
           .post-id-extract{
