ダークテーマ時にリンクの色がライトテーマ時の色になる問題を修正

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -569,6 +569,7 @@ $darktheme-btn-primary-color: #308cff;
     #post-box{
       a,
       .post-body-anchor-no,
+      .post-body-link,
       .post-id-extract{
         color: $darktheme-link-font-color;
       }
