--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -281,6 +281,7 @@ header{
         }
         .post-body-link{
           @extend .link;
+          user-select: text;
         }
         .post-body-anchor{
           @extend .link;
